--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,45 +1,44 @@
-<table class="table table-striped col-md-7" align="center">
+<table class="table table-striped col-md-10" align="center">
     <h2 align="center">OFERTAS</h2>
   <thead>
     <tr>
       <th scope="col">Id</th>
       <th scope="col">Puesto</th>
-      <th scope="col">Description</th>
+      <th scope="col">Descripcion</th>
+      <th scope="col">Requisitos</th>
       <th scope="col">Salario</th>
+      <th scope="col">Fin de Oferta</th>
+      <th scope="col">Operación</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Web Development</td>
-      <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad ipsam nihil repellendus rerum quod, iste blanditiis delectus.</td>
-      <td>25.000€</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Administrativo</td>
-      <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad ipsam nihil repellendus rerum quod, iste blanditiis delectus.</td>
-      <td>21.000€</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Abogado</td>
-      <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate sapiente itaque labore totam velit optio impedit ad beatae temporibus repudiandae dolore dicta, quis voluptatem quam quibusdam exercitationem sit doloribus eligendi.</td>
-      <td>24.000€</td>
-    </tr>
+     {{#each offers as |offer|}}
+    {{>offer offer=offer }}
+  {{else}}
+  <p>Empty offer!!</p>
+  {{/each}}
   </tbody>
 </table>
 <div class="container">
   <div class="row">
-<div class="col-md-5">
+<div class="col-md-6">
     <div class="card">
         <div class="card-body">
             <form action="/add" method="POST">
                 <div class="form-group">
-                    <input type="text" name="title" placeholder="Cual es el puesto?" class="form-control">
+                    <input type="text" name="post" placeholder="Cual es el puesto?" class="form-control">
                 </div>
                 <div class="form-group">
                     <textarea name="description" placeholder="Describe" cols="80" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <textarea name="requirements" placeholder="Requisitos" cols="80" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <input type="texto" name="salary" placeholder="Salario" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="date" name="endOffer" placeholder="Fin de Oferta" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">
                   Añadir Oferta
@@ -49,5 +48,4 @@
     </div>
 </div>
 </div>
-</div    
-
+</div
