--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="/">Navbar</a>
+  <a class="navbar-brand" href="/">Inicio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,9 +25,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Consejos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
     <a href="/login" class="btn btn-dark" style="margin: 10px" role="button" aria-disabled="true">Acceder</a>
