--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,9 @@
           <th scope="col">Requisitos</th>
           <th scope="col">Salario</th>
           <th scope="col">Fin de Oferta</th>
+          <% if (user) { %>
           <th scope="col">Operación</th>
+          <% } %>
         </tr>
       </thead>
       <tbody>
@@ -21,8 +23,10 @@
                 <td class="mb-2"><%= (offers[i].salary) %></td>
                 <td class="mb-2"><%= (offers[i].endOffer.getDate()) %> / <%= (offers[i].endOffer.getMonth())+1 %> / <%= (offers[i].endOffer.getYear())+1900 %></td>
                 <td>
+                    <% if (user) { %>
                   <a href="/edit/{{offer.id}}" class="btn btn-info mb-1">Editar</a>
-                  <a href="/delete/{{offer.id}}" class="btn btn-danger mb-1">Borrar</a>
+                  <a href="/delete/<%= (offers[i].id) %>" class="btn btn-danger mb-1">Borrar</a>
+                  <% } %>
                 </td>
                 </tr>
         <%}%>
