Actualizacion 7 - Modificacion nombre db y Boton editar Oferta

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -16,7 +16,7 @@
     <h2 align="center"><b><u>AQUÍ PUEDES AÑADIR UNA OFERTA DE EMPLEO</u></b></h2>
     <div class="container">
             <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 offset-md-3">
               <div class="card">
                   <div class="card-body">
                       <form action="/add" method="POST">
