--- a/src/views/edit-offer.ejs
+++ b/src/views/edit-offer.ejs
@@ -1,31 +1,35 @@
 <%- layout('layouts/main') %>
   <h1 class="mt-4"></h1>
 
-<div class="row">
-  <div class="col-md-4 offset-md-4">
-    <div class="card mt-4 text-center">
-      <div class="card-header">
-        <h3>Editar Oferta</h3>
-      </div>
-      <div class="card-body">
-        <form action="/edit-offer" method="POST">
-          <div class="form-group">
-          <input type="text" name="post" placeholder="puesto" class="form-control">
-        </div>
-        <div class="form-group">
-          <input type="text" name="description" placeholder="descripcion" class="form-control">
-        </div>
-        <div class="form-group">
-            <input type="text" name="requirements" placeholder="requisitos" class="form-control">
+  <div class="container">
+    <div class="row">
+      <div class="container">
+        <div class="row">
+      <div class="col-md-6 offset-md-3">
+          <div class="card">
+              <div class="card-body">
+                  <form action="/update/<%= offer._id %>" method="POST">
+                      <div class="form-group">
+                          <input type="text" name="post" placeholder="¿Cual es el puesto?" class="form-control" value="<%= offer.post %>"></input>
+                      </div>
+                      <div class="form-group">
+                          <textarea name="description" placeholder="Describe" cols="80" class="form-control"><%= offer.description %>
+                          </textarea>
+                      </div>
+                      <div class="form-group">
+                          <textarea name="requirements" placeholder="Requisitos" cols="80" class="form-control"><%= offer.requirements %></textarea>
+                      </div>
+                      <div class="form-group">
+                          <input type="texto" name="salary" placeholder="Salario" class="form-control" value="<%= offer.salary %>"></input>
+                      <button type="submit" class="btn btn-primary btn-block">
+                        Guardar Cambios
+                      </button>
+                  </form>
+              </div>
           </div>
-          <div class="form-group">
-              <input type="text" name="salary" placeholder="salario"  class="form-control">
-            </div>
-          <button type="submit" class="btn btn-primary btn-block mt-4">
-            Editar
-          </button>
-        </form>
+      </div>
       </div>
     </div>
+    </div>
+    </div>
   </div>
-</div
