--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -17,6 +17,9 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
         <% if (user) { %>
+          <li class="nav-item">
+              <a class="nav-link" href="/my-offers">Mis Ofertas</a>
+            </li>
         <li class="nav-item">
             <a class="nav-link" href="/profile">Perfil</a>
           </li>
