--- a/src/views/my-offers.ejs
+++ b/src/views/my-offers.ejs
@@ -9,22 +9,29 @@
           <th scope="col">Requisitos</th>
           <th scope="col">Salario</th>
           <th scope="col">Fin de Oferta</th>
+          <th scope="col">Operación</th>
         </tr>
       </thead>
       <tbody>
           <% for(var i = 0; i< offers.length; i++) { %>
+           
             <tr>
                 <td class="mb-2"><%= (offers[i].post) %></td>
                 <td class="mb-2"><%= (offers[i].description) %></td>
                 <td class="mb-2"><%= (offers[i].requirements) %></td>
                 <td class="mb-2"><%= (offers[i].salary) %></td>
                 <td class="mb-2"><%= (offers[i].endOffer ? offers[i].endOffer.toLocaleDateString() : '')%></td>
+                <td>
+                    
+                  <a href="/edit/<%= (offers[i].id) %>" class="btn btn-info mb-1">Editar</a>
+                  <a href="/delete/<%= (offers[i].id) %>" class="btn btn-danger mb-1">Borrar</a>
+                  
+                </td>
                 </tr>
+                
         <%}%>
 
          
       </tbody>
     </table>
     
-
-
