--- a/src/views/new-offer.ejs
+++ b/src/views/new-offer.ejs
@@ -30,6 +30,9 @@
                       <div class="form-group">
                           <input type="date" name="endOffer" placeholder="Fin de Oferta" class="form-control">
                       </div>
+                      <div class="form-group">
+                            <input type="hidden" name="user"  class="form-control" value="<%= (user.id) %>">
+                        </div>
                       <button type="submit" class="btn btn-success btn-block">
                         Añadir Oferta
                       </button>
