--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,7 @@
                 <td class="mb-2"><%= (offers[i].description) %></td>
                 <td class="mb-2"><%= (offers[i].requirements) %></td>
                 <td class="mb-2"><%= (offers[i].salary) %></td>
-                <td class="mb-2"><%= (offers[i].endOffer ? offers[i].endOffer.toLocaleDateString() : '')%></td>
+                <td class="mb-2"><%= (offers[i].endOffer ? offers[i].endOffer.toLocaleDateString() : 'es-ES')%></td>
                 </tr>
         <%}%>
 
