--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Find Job Fast</title>
-  <link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
 </head>
 <body>
   <!-- NAVIGATION -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <a class="navbar-brand" href="/">Inicio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -51,6 +51,81 @@
   
     <%- body %>
   </div>
+  <footer class="page-footer font-small bg-primary pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+  
+      <!-- Grid row -->
+      <div class="row">
+  
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+  
+          <!-- Content -->
+          <h5 class="text-uppercase">Find Job Fast</h5>
+          <p>Encuentra Trabajo rápida y facilmente.</p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase text-dark">Nosotros</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!" class="text-dark">Ayuda</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Condiciones legales</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Política de Privacidad</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase">Sobre Rapid Jobs</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!" class="text-dark">Orientación laboral</a>
+            </li>
+            <li>
+              <a href="#!" class="text-dark">Trabaja con nosotros</a>
+            </li>
+            <li>
+              <a href="#!"class="text-dark">Blog</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Abel y Álvaro:
+      <a href="https://www.ironhack.com/es" class="text-light"> IronHack</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
 </body>
   
 </html>
