--- a/src/views/new-offer.ejs
+++ b/src/views/new-offer.ejs
@@ -1,4 +1,19 @@
 <%- layout('layouts/main') %>
+
+<div class="card">
+    <div class="card-header">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/update-user/<%= (user.id) %>">Mi Perfil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/update-user/<%= (user.id) %>">Modificar Perfil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/new-offer">Añadir Nueva Oferta</a>
+        </li>
+      </ul>
+    </div>
 <h1 class="mt-4 text-center" ><u><b>NUEVA OFERTA</b></u></h1>
   <h3 class="mt-4 text-center " ><b>¡¡ RECOMENDACIONES !!</b></h3>
   <div class=" offset-md-3">
