--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,40 +1,40 @@
 <%- layout('layouts/main') %>
 
-<h1>PERFIL</h1>
+                <div class="card">
+                        <div class="card-header">
+                          <ul class="nav nav-tabs card-header-tabs">
+                            <li class="nav-item">
+                              <a class="nav-link active" href="/update-user/<%= (user.id) %>">Mi Perfil</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="/update-user/<%= (user.id) %>">Modificar Perfil</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="/new-offer">Añadir Nueva Oferta</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="card card-body" style="display: flex;flex-direction: row; flex-wrap: nowrap; justify-content: space-between ">
+                                        
+                                    <div style=" float:left">
+                                      </p><h3>Tu Email</h3>
+                            <h5><%= user.email %></h5>
+                            <p><h3>Mi nombre</h3>
+                                <h5><%= user.name%></h5>
+                            </p>
+                            <p><h3>Mi compañía</h3>
+                                <h5><%= user.company %></h5>
+                            </p>
+                            <p><h3>Mi Puesto</h3>
+                                    <h5><%= user.position %></h5>
+                                </p>
+                                <p><h3>Mi Ciudad</h3>
+                                        <h5><%= user.city %></h5>
+                                    </p>
+                                    <p><h3>Mi Teléfono</h3>
+                                            <h5><%= user.phone %></h5>
+                                        </p></div>
+                      <img src="<%= user.avatar %>" width=250 height=250 style="margin-right:0px">
 
-<div class="card card-body">
-        <p><style type="text/css">
-            b
-            {
-              font-size: 25px;
-              float:right;
-            }
-           </style>
-                <img src="<%= user.avatar %>">
-            </p>
-    <h3>Tu Email</h3>
-    <h5><%= user.email %></h5>
-    <p>
-        <h3>Tu nombre</h3>
-        <h5><%= user.name%></h5>
-    </p>
-    <p>
-        <h3>Tu compañía</h3>
-        <h5><%= user.company %></h5>
-    </p>
-    <p>
-            <h3>Tu Puesto</h3>
-            <h5><%= user.position %></h5>
-        </p>
-        <p>
-                <h3>Tu Ciudad</h3>
-                <h5><%= user.city %></h5>
-            </p>
-            <p>
-                    <h3>Tu Teléfono</h3>
-                    <h5><%= user.phone %></h5>
-                </p>
-
-    <a href="/update-user/<%= (user.id) %>" class="btn btn-info mb-4" role="button" aria-pressed="true">Modificar Perfil</a>
-    <a href="/new-offer" class="btn btn-success" role="button" aria-pressed="true">Añadir Oferta nueva</a>
+                      </div>
     
